force-app/main/default/objects/teacher__c/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <label>subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIOLOGY</fullName>
            </value>
            <value>
                <fullName>MATH</fullName>
            </value>
            <value>
                <fullName>TURKISH</fullName>
            </value>
            <value>
                <fullName>ENGLISH</fullName>
            </value>
            <value>
                <fullName>CHEMISTRY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>