force-app/main/default/objects/teacher__c/fields/SUBJECT_NAME__c.field-meta.xml
<CustomField>
    <fullName>SUBJECT_NAME__c</fullName>
    <label>SUBJECT NAME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TURKISH</fullName>
            </value>
            <value>
                <fullName>MATH</fullName>
            </value>
            <value>
                <fullName>BIOLOGY</fullName>
            </value>
            <value>
                <fullName>CHEMISTRY</fullName>
            </value>
            <value>
                <fullName>FRENCH</fullName>
            </value>
            <value>
                <fullName>COMPUTING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>