force-app/main/default/objects/teacher__c/fields/teachers__c.field-meta.xml
<CustomField>
    <fullName>teachers__c</fullName>
    <label>TEACHER</label>
    <length>80</length>
    <type>Text</type>
</CustomField>